# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
backend/app/routers/: items.py
caddy/: Caddyfile
mcp/mcp_obs/: __init__.py  pyproject.toml  server.py
nanobot/: Dockerfile  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: SOUL.md
nanobot/workspace/sessions/: cli_direct.jsonl
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
schedule-bot/: PLAN.md
